--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -3,25 +3,20 @@
 /* ============================================= */
 
 .nav {
-    padding-left: 0;
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    &-link {
-      text-align: center;
-      border-radius: 5px;
-      padding: 10px 0;
-      display: block;
-      width: 100%;
-      transition: 
-        background-color .2s ease-in-out, 
-        color .2s ease-in-out;
-    }
-    &-link:hover {
-      color: $white;
-      background-color: $primary-color;
-    }
+  padding-left: 0;
+  flex-basis: 100%;
+  @include flexy($disp: flex, $dir: column);
+
+  &-link {
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px 0;
+    display: block;
+    width: 100%;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   }
-  
-  
-  
+  &-link:hover {
+    color: $white;
+    background-color: $primary-color;
+  }
+}
