--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -7,3 +7,16 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@mixin flexy(
+  $disp: null,
+    $dir: null, 
+    $wrap: null, 
+    $just: null, 
+    $align: null) {
+  display: $disp;
+    flex-direction: $dir;
+    flex-wrap: $wrap;
+    justify-content: $just;
+    align-items: $align;
+  }
