--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,33 +3,48 @@
 /* ============================================= */
 
 .btn {
-    margin-top: 15px;
-    width: 100%;
-    color: $white;
-    border: none;
-    padding: 10px 0;
-    text-transform: uppercase;
-    border-radius: 5px;
-   
+  margin-top: 15px;
+  width: 100%;
+  color: $white;
+  border: none;
+  padding: 10px 0;
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: opacity 0.3s ease-in;
+  &:hover {
+    opacity: 0.8;
   }
   
-  .default {
-    background-color: $secondary-color;
-  }
+
+  @include mq($break-m) {
+    & {
+      padding: 10px 30px;
+    }
   
-  .error {
-    background-color: $error-color;
+    & + & {
+      margin-left: 10px;
+    }
   }
+}
+
+.default {
+  background-color: $secondary-color;
   
-  .info {
-    background-color: $info-color;
-  }
+}
+
+.error {
+  background-color: $error-color;
   
-  .success {
-    background-color: $success-color;
-  }
-  
-  .warning {
-    background-color: $warning-color;
-  }
-  
+}
+
+.info {
+  background-color: $info-color;
+}
+
+.success {
+  background-color: $success-color;
+}
+
+.warning {
+  background-color: $warning-color;
+}
