--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -3,20 +3,22 @@
 /* ============================================= */
 
 @mixin center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@mixin flexy(
-  $disp: null,
-    $dir: null, 
-    $wrap: null, 
-    $just: null, 
-    $align: null) {
+@mixin flexy($disp: null, $dir: null, $wrap: null, $just: null, $align: null) {
   display: $disp;
-    flex-direction: $dir;
-    flex-wrap: $wrap;
-    justify-content: $just;
-    align-items: $align;
-  }
+  flex-direction: $dir;
+  flex-wrap: $wrap;
+  justify-content: $just;
+  align-items: $align;
+}
+
+@mixin mq($break) {
+@media(min-width: $break) {
+@content;
+
+}
+}
