--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,6 @@ a {
   padding: 10px 0;
   text-transform: uppercase;
   border-radius: 5px;
-  transition: background-color 0.2 ease-in;
 }
 @media (min-width: 768px) {
   .btn {
@@ -427,22 +426,42 @@ a {
 
 .default {
   background-color: #51ddfc;
+  transition: background-color 0.3s ease-in;
+}
+.default:hover {
+  background-color: #9cecfd;
 }
 
 .error {
   background-color: #e4757a;
+  transition: background-color 0.3s ease-in;
+}
+.error:hover {
+  background-color: #f1b5b8;
 }
 
 .info {
   background-color: #927bc1;
+  transition: background-color 0.3s ease-in;
+}
+.info:hover {
+  background-color: #bdafd9;
 }
 
 .success {
   background-color: #63cc82;
+  transition: background-color 0.3s ease-in;
+}
+.success:hover {
+  background-color: #9ddfb0;
 }
 
 .warning {
   background-color: #fd7856;
+  transition: background-color 0.3s ease-in;
+}
+.warning:hover {
+  background-color: #feb4a2;
 }
 
 /* ============================================= */
@@ -509,6 +528,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   margin-top: 10px;
   max-width: 100%;
   max-height: 100%;
@@ -518,6 +538,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   margin-top: 10px;
   max-width: 100%;
   padding: 13px;
@@ -528,6 +549,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 /* ============================================= */
@@ -542,6 +564,7 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
   }
 }
 
@@ -598,7 +621,6 @@ a {
 
 .theme.col-7 {
   background-color: #ec9fa3;
-  align-content: center;
 }
 
 .theme.col-8 {
@@ -633,6 +655,8 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    text-align: center;
   }
 
   [class^=col] + [class^=col] {
