--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -10,17 +10,12 @@
   padding: 10px 0;
   text-transform: uppercase;
   border-radius: 5px;
-  transition: opacity 0.3s ease-in;
-  &:hover {
-    opacity: 0.8;
-  }
   
-
   @include mq($break-m) {
     & {
       padding: 10px 30px;
     }
-  
+
     & + & {
       margin-left: 10px;
     }
@@ -29,22 +24,25 @@
 
 .default {
   background-color: $secondary-color;
-  
+  @include lighten-color($color: $secondary-color);
 }
 
 .error {
   background-color: $error-color;
-  
+  @include lighten-color($color: $error-color);
 }
 
 .info {
   background-color: $info-color;
+  @include lighten-color($color: $info-color);
 }
 
 .success {
   background-color: $success-color;
+  @include lighten-color($color: $success-color);
 }
 
 .warning {
   background-color: $warning-color;
+  @include lighten-color($color: $warning-color);
 }
