--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -3,9 +3,9 @@
 /* ============================================= */
 
 @media (min-width: $break-m) {
-  
   .centered {
     @include center;
+    text-align: center;
   }
 
   [class^="col"] + [class^="col"] {
@@ -59,5 +59,4 @@
   .col-12 {
     flex-basis: 100%;
   }
-
 }
