--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -6,6 +6,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 @mixin flexy($disp: null, $dir: null, $wrap: null, $just: null, $align: null) {
@@ -17,8 +18,14 @@
 }
 
 @mixin mq($break) {
-@media(min-width: $break) {
-@content;
-
+  @media (min-width: $break) {
+    @content;
+  }
 }
+
+@mixin lighten-color($color, $amount: 15%) {
+  transition: background-color 0.3s ease-in;
+  &:hover {
+    background-color: lighten($color, $amount);
+  }
 }
